# dbt-incident

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py  tox.ini
dbt/adapters/incident/: __init__.py  connections.py  impl.py  utils.py
dbt/include/incidentadapter/: dbt_project.yml  profile_template.yml
dbt/include/incidentadapter/macros/: adapters.sql  catalog.sql
tests/functional/adapter/: test_basic.py
