[tool.poetry]
name = "dbt-incident"
version = "0.0.1"
description = ""
authors = ["jx2lee <dev.jaejun.lee.1991@gmail.com>"]
readme = "README.md"
packages = [{include = "dbt_incident"}]

[tool.poetry.dependencies]
python = ">=3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
